sources/src/sass/base/_layout.scss
@import "./normalize";
@import "./vars";
@import "./mixins";
@import "./fonts";
@import "./sprite_generated";

// From libs:
//@import "../libs/LIB_NAME/path/to/style.scss"
@import "../libs/swiper/swiper-bundle.min.css";
// @import "../libs/splide/splide.min.css";
@import "../libs/choices/choices.min.css";

/*===== global styles =====*/

html {
  box-sizing: border-box;
}
*,
::after,
::before {
  box-sizing: inherit;
  box-sizing: border-box;
}
// min-height: 0.001vw; // — Fixes Safari bug with viewport units in calc()

body {
  width: 100%;
  height: 100%;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  font-family: "Montserrat", sans-serif;
  color: #000;
  background-color: #fff;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow-x: hidden;
}

body.lock {
  overflow: hidden;
}

body.noscroll {
  overflow: hidden;
}

.container {
  width: 100%;
  max-width: 1520px;
  min-width: 320px;
  margin: 0 auto;
  padding: 0 40px;

  @include xs {
    padding: 0 20px;
  }
}

a {
  color: inherit;
  text-decoration: none;
  outline: none;
}

html,
body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
ol,
ul,
li {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  vertical-align: baseline;
}

ol,
ul {
  list-style: none !important;
}

button,
input {
  font-family: inherit;
  border: none;
  appearance: none;
  outline: none;
  background-color: transparent;
  color: #000;
}

button {
  cursor: pointer;
}

:active,
:hover,
:focus {
  outline: 0;
  outline-offset: 0;
}

.visualhidden {
  position: absolute;
  clip: rect(1px, 1px, 1px, 1px);
  clip-path: inset(0 0 99.9% 99.9%);
  overflow: hidden;
  height: 1px;
  width: 1px;
  padding: 0;
  border: 0;
}

.hidescrollbar {
  // hide scrollbar in Firefox
  scrollbar-width: none;

  // hide scrollbar in Chrome, Safari
  &::-webkit-scrollbar {
    width: 0;
    height: 0;
  }
}

.btn__black {
  display: block;
  width: 100%;
  padding: 0;
  font-size: 17px;
  font-weight: 600;
  color: #fff;
  background-color: #000;
  border: 1px solid #000;
  transition: color 0.2s ease-out, background-color 0.2s ease-out;

  &:hover {
    color: #000;
    background-color: #fff;
  }
}

.btn__white {
  display: block;
  width: 100%;
  padding: 18px 20px;
  font-size: 17px;
  font-weight: 600;
  color: #000;
  background-color: #fff;
  border: 1px solid #000;
  transition: color 0.2s ease-out, background-color 0.2s ease-out;

  &:hover {
    color: #fff;
    background-color: #000;
  }
}

// button 'showmore'

.showmore__btn {
  display: none;
  width: 100%;
  max-width: 466px;
  justify-content: center;
  align-items: center;
  margin: 48px auto 0;
  padding: 20px 30px;
  text-align: center;
  font-size: 15px;
  font-weight: 600;
  color: #fff;
  background-color: #000;
  border: 1px solid #000;
  transition: all 0.2s ease-out;

  &:hover {
    color: #000;
    background-color: #fff;
  }

  @include xs {
    display: flex;
  }

  @include xxs {
    max-width: 506px;
  }
}

// stickers for cards

.sticker__sale {
  position: absolute;
  left: 0;
  bottom: 0;
  z-index: 2;
  padding: 8px 14px;
  text-align: center;
  font-size: 17px;
  font-weight: 600;
  letter-spacing: 0.85px;
  color: #fff;
}

.sticker__blue {
  background-color: #001bc6;
}

.sticker__green {
  background-color: #65d80d;
}

.stiker__azure {
  background-color: rgb(46, 132, 154);
}

.sticker__red {
  background-color: #e84851;
}

.sticker__darkRed {
  background-color: #9c0029;
}

.stiker__hidden {
  display: none;
}

// card of good for main page

.goodsSection {
  content-visibility: auto;
  margin-top: 100px;

  @include sm {
    margin-top: 160px;
  }
}

.goodsSection__title {
  padding: 31px 0 35px;
  // border-top: 1px solid rgb(208, 208, 208);
  color: #000;
  font-size: 32px;
  font-weight: 600;
  letter-spacing: 2.24px;
  text-transform: uppercase;

  @include xxs {
    font-size: 24px;
  }
}

.goodsCard__wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 0 24px;

  @include sm {
    grid-template-columns: repeat(2, 1fr);
    gap: 48px;
    padding: 0 80px;
  }

  @include xs {
    gap: 30px 20px;
    padding: 0;
  }

  @include xxs {
    max-width: 335px;
    margin: 0 auto;
    grid-template-columns: 1fr;
    gap: 38px 0;
    padding: 0;
  }
}

.goodsCard__item {
  display: flex;
  flex-wrap: wrap;
  background-color: #fff;
}

.goodsCard__descr {
  width: 100%;
}

.goodsCard__img {
  position: relative;
  width: 100%;
  margin-bottom: 24px;
  border: 1px solid #d9d9d9;

  &::after {
    content: "";
    display: block;
    width: 100%;
    padding-top: 100%;
  }

  & > img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
}

.goodsCard__addToFavorites {
  position: absolute;
  top: 13px;
  right: 23px;
  z-index: 3;
  width: 24px;
  height: 24px;
  display: flex;
  justify-content: center;
  align-items: center;

  img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: contain;
    transition: opacity 0.2s ease-out;

    &:nth-child(1) {
      opacity: 1;
    }

    &:nth-child(2),
    &:nth-child(3) {
      opacity: 0;
      visibility: hidden;
      pointer-events: none;
    }
  }

  &:hover {
    img {
      &:nth-child(1) {
        opacity: 0;
        visibility: hidden;
        pointer-events: none;
      }

      &:nth-child(2) {
        opacity: 1;
        visibility: visible;
        pointer-events: all;
      }

      &:nth-child(3) {
        opacity: 0;
        visibility: hidden;
        pointer-events: none;
      }
    }
  }

  .goodsCard__item.addedToFavorites & {
    img {
      &:nth-child(1) {
        opacity: 0;
        visibility: hidden;
        pointer-events: none;
      }

      &:nth-child(2) {
        opacity: 0;
        visibility: hidden;
        pointer-events: none;
      }

      &:nth-child(3) {
        opacity: 1;
        visibility: visible;
        pointer-events: all;
      }
    }
  }
}

.goodsCard__price {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  gap: 5px 25px;
  margin-bottom: 21px;

  span {
    font-size: 28px;
    font-weight: 600;
    letter-spacing: 1.4px;
    white-space: nowrap;
  }

  @include xs {
    margin-bottom: 24px;
  }
}

.goods__priceNew {
  color: #000;
}

.goods__priceOld {
  color: #acacac;
  text-decoration: line-through;
}

.goodsCard__name {
  width: 100%;
  margin-bottom: 11px;
  color: #000;
  font-size: 20px;
  font-weight: 600;
  line-height: 120%;
}

.goodsCard__about {
  width: 100%;
  margin-bottom: 28px;
  color: var(--color_grey, #838383);
  font-size: 15px;
  font-weight: 500;
  line-height: 146.667%;

  @include xs {
    margin-bottom: 26px;
  }
}

.goodsCard__addToCart {
  align-self: flex-end;
  display: block;
  width: 100%;
  padding: 17px 30px;
  color: #000;
  text-align: center;
  font-size: 17px;
  font-weight: 600;
  border: 1px solid rgb(208, 208, 208);
  transition: all 0.2s ease-out;

  &:hover {
    color: #fff;
    background-color: #000;
    border: 1px solid #000;
  }
}

.goodsCard__nav {
  position: absolute;
  top: 143px;
  left: 0;
  z-index: 2;
  width: 100%;

  @include lg {
    top: 100px;
  }

  @include xs {
    display: none;
  }

  @include sm {
    top: 48%;
  }
}

.goodsCard__nav-wrapper {
  width: 100%;
  max-width: 1520px;
  min-width: 320px;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
  pointer-events: none;

  @include sm {
    .intro__prev {
      border-top: 1px solid #000;
      border-bottom: 1px solid #000;
      border-right: 1px solid #000;
    }

    .intro__next {
      border-top: 1px solid #000;
      border-bottom: 1px solid #000;
      border-left: 1px solid #000;
    }
  }

  @include xs {
    padding: 0 20px;
  }
}

// reset copyright of yandex map
[class*="copyrights-pane"] {
  display: none !important;
}

// === layout for animation

.goodsSection,
.discountedProducts {
  .intro__prev,
  .intro__next {
    transition: opacity 0.2s ease-out;

    &.disabled {
      pointer-events: none;
    }
  }

  &.slider-start {
    .intro__prev {
      opacity: 0;
      visibility: hidden;
      pointer-events: none;
    }
  }

  &.slider-finish {
    .intro__next {
      opacity: 0;
      visibility: hidden;
      pointer-events: none;
    }
  }
}

.goodsCard__sliderWrapper {
  width: 100%;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr;
  overflow: hidden;
}

.goodsCard__slide {
  position: relative;
  height: 100%;
  display: grid;
  grid-row-start: 1;
  grid-row-end: 2;
  grid-column-start: 1;
  grid-column-end: 2;
  background-color: #fff;
  overflow: hidden;

  .goodsCard__inner {
    height: 100%;
    display: grid;
  }

  &:not(:first-child) {
    left: 100%;

    .goodsCard__inner {
      transform: translateX(-90%);
    }
  }
}

// inputs

.input-required {
  &.error {
    border-color: #f00;

    &::placeholder {
      color: #f00;
    }
  }
}

///////////
.hidden-on-mobile {
  @include xxs {
    display: none;
  }
}

